--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
              </div>
              <div class="widget widget_socials">
                 <div class="socials">
-                   <a target="_blank" href="https://twitter.com/KohliConnect"><i class="fa fa-twitter"></i></a>
-                   <a target="_blank" href="https://www.facebook.com/KohliConnect/"><i class="fa fa-facebook"></i></a>
-                   <a target="_blank" href="https://www.instagram.com/KohliConnect"><i class="fa fa-instagram"></i></a>
-                   <a target="_blank" href="https://www.linkedin.com/company/kohlicompany/"><i class="fa fa-linkedin"></i></a>
+                   <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
+                   <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
+                   <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                   <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
              </div>
              
