--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="slider-info">
                             <div class="d-grid slide-two-col">
                                 <div class="slide-left-text">
-                            <h3>Powerful website hosting services</h3>
+                            <h3>Web Designing services</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                             <h6>Starting at only <span>Rs. 1/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
@@ -123,7 +123,7 @@
                                         <img src="./img/slide2.png" class="img-responsive" alt="">
                                     </div>
                                     <div class="slide-left-text">
-                                <h3>SSL Cerificate</h3>
+                                <h3>Hosting Services</h3>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <h6>Starting at only <span>FREE/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
@@ -138,7 +138,7 @@
                             <div class="slider-info">
                                 <div class="d-grid slide-two-col">
                                     <div class="slide-left-text">
-                                <h3>Embedded G Suite</h3>
+                                <h3>Social Connecting Services</h3>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                                 <h6>Starting at only <span>Rs. 150/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
@@ -170,7 +170,41 @@
     </div>
 </section>
 <!-- covers4 block -->
+<div class="about-us">
 
+	<article>
+
+		<h2 class="host-title" style="font-size: 45px; margin-bottom: 45px;">About Us</h2>
+		<p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta id dolorem cupiditate eos cumque earum esse ipsa sunt impedit aperiam, dolor velit sit officia quaerat autem magni, sint voluptatum aut.</p>
+
+	</article>
+
+	<aside>
+
+		<ul>
+			<li>
+				<h3>
+					<span>11+</span>
+					<span>Years of Service</span>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<span>500+</span>
+					<span>Projects Implemented</span>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<span>250+</span>
+					<span>Costumers Served</span>
+				</h3>
+			</li>
+		</ul>
+
+	</aside>
+
+</div>
 <!-- features-4 -->
 <section class="sg-features-4">
     <div id="features4-block">
