carousel context updated

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
                         <div class="slider-info">
                             <div class="d-grid slide-two-col">
                                 <div class="slide-left-text">
-                            <h3>Web Designing services</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                            <h3>Web Design Services</h3>
+                            <p>Kohli WebDesign started in 2004 by Sahil Kohli as a Hobby and today, we are one of the leading WebDesigning Company based in Gujarat.</p>
+                            <p>We specializes in web design and development, but we also place a lot of focus on marketing web sites and businesses.</p>
                             <h6>Starting at only <span>Rs. 1/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
                             </div>
@@ -124,7 +125,8 @@
                                     </div>
                                     <div class="slide-left-text">
                                 <h3>Hosting Services</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                                <p>Kohli Hosting is a leading web services provider to Individuals, SMEs, Corporates, Non-Profit & Government Organizations, and Educational Institutions worldwide.</p>
+                                <p>Our Product portfolio includes Domain Registration, Windows/Linux Web Hosting, Email Hosting, SSL Certificates, Private Label Reseller Programs, etc.</p>
                                 <h6>Starting at only <span>FREE/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
                                 </div>
@@ -138,8 +140,9 @@
                             <div class="slider-info">
                                 <div class="d-grid slide-two-col">
                                     <div class="slide-left-text">
-                                <h3>Social Connecting Services</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                                <h3>Connect Services</h3>
+                                <p>Kohli Connect (foremely known as Kohli SMS Service) is a leading Interactive SMS & Voice Solutions provider.</p>
+                                <p>We help enterprises leverage the high growth in the mobile market by running an end-to-end mobile campaign. We also develop customized applications using Kohli Connect's API.</p>
                                 <h6>Starting at only <span>Rs. 150/<sub>mon</sub></span></h6>
                                 <a href="#" style="max-width: 150px;" class="btn button-style">Get Started</a>
                                 </div>
